bugfixed git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9216 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/Makefile.installer
+++ b/Makefile.installer
@@ -116,7 +116,7 @@ tools-checkout :
 	 if [ -d uni ] ; then \
 	   svn update uni ; \
 	 else \
-	  svn checkout $(UNI_TRANK) uni ; \
+	  svn checkout $(UNI_TRUNK) uni ; \
 	 fi ;  \
 	 $(TAR) cvfj uni.tar.bz2 uni ;\
 	 echo checkout programatica ; \
