--- a/Makefile.installer
+++ b/Makefile.installer
@@ -92,9 +92,9 @@ hetcats-download : tools-checkout
 	cp utils/el/*.el  $(IZPACK_SAMPLE)/hets  ;\
 	cp hets.in $(IZPACK_SAMPLE)/hets/hets ;\
 	cp utils/getDailyHets-installer.sh $(IZPACK_SAMPLE)/getDailyHets.sh ;\
-	cp OWL_DL/owl_parser.installer $(IZPACK_SAMPLE)/hets/owl_parser ; \
-	cp OWL_DL/java/OWLParser.jar $(IZPACK_SAMPLE)/hets/java ; \
-	cp -r OWL_DL/java/jlib CASL/Termination/AProVE.jar \
+	cp OWL/owl_parser.installer $(IZPACK_SAMPLE)/hets/owl_parser ; \
+	cp OWL/OWL2ATerm.jar $(IZPACK_SAMPLE)/hets/java ; \
+	cp -r OWL/lib CASL/Termination/AProVE.jar \
 	                   $(IZPACK_SAMPLE)/hets/java ;\
 	cp utils/hetcasl.sty docs/UserGuide.pdf $(IZPACK_SAMPLE)/hets/doc/
 	cp -r SPASS-ppc-mac/SPASS* $(IZPACK_SAMPLE)/SPASS/MAC/$(SPASS_DIR_MAC)/SPASS 
