Done some restructuring. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9353 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/Makefile
+++ b/GMP/Makefile
@@ -1,17 +1,8 @@
 call:
 	./ghc-call
 
-racer:
-	ghc --make -i.. ToRacer.hs -o toRacer
-
-tester:
-	ghc --make -i.. Tester4IneqSolv.hs -o isTester
-
-lwb:
-	ghc --make -i.. LWBParser.hs -o lwbParser
-
 clean:
-	rm main *.hi *.o
+	rm *.hi *.o
 
 distclean:
-	rm main *.hi *.o *~ lwbParser toRacer isTester
+	rm main *~; make clean
