programatica needs array for ghc-6.8.2 git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9372 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/programatica.cabal
+++ b/utils/programatica.cabal
@@ -245,6 +245,6 @@ Library
  ghc-options: -O -fglasgow-exts
  build-depends: haskell98, mtl
  if flag(splitBase)
-    build-depends: base >= 3.0, containers, pretty
+    build-depends: base >= 3.0, array, containers, pretty
  else
     build-depends: base < 3.0
