make missing directories git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9476 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/Makefile.installer
+++ b/Makefile.installer
@@ -95,6 +95,7 @@ hets-download :
 
 release-hets-download :
 	for i in linux solaris mac intel-mac; do \
+	mkdir -p $(IZPACK_HETS)/$$i ; \
         wget --output-document=$(IZPACK_HETS)/$$i/hets-$(HETS_VERSION).bz2 \
            $(HETS_URL)/$$i/versions/hets-$(HETS_VERSION).bz2; done
 
