improved tools-checkout git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9477 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/Makefile.installer
+++ b/Makefile.installer
@@ -101,13 +101,14 @@ release-hets-download :
 
 tools-checkout :
 	@echo update uni
-	@cd $(IZPACK_SAMPLE)/src ; \
+	cd $(IZPACK_SAMPLE)/src ; \
 	  svn checkout $(UNI_TRUNK) uni ; \
-	 $(TAR) cvfj uni.tar.bz2 uni ;\
+	 $(TAR) cvfz uni.tgz --exclude=.svn --exclude=.cvsignore uni ;\
 	 echo checkout programatica ; \
 	 cvs -d  :pserver:anoncvs@cvs.haskell.org:/cvs co \
              programatica/tools/base programatica/tools/property  ;\
-	 $(TAR) cvfj programatica.tar.bz2 programatica
+	 $(TAR) cvfz programatica.tgz --exclude=CVS --exclude=.cvsignore \
+             programatica
 
 izpack_checkout :
 	@echo update izpack_het
