--- a/hets.in
+++ b/hets.in
@@ -37,10 +37,7 @@ if [ -f "$ISABELLE_HOME/Isabelle/bin/isabelle-interface" ] ;
 fi    
 
 if [ -z "$HETS_ISABELLE" ] ; then
-    case `uname -s` in
-	Darwin) HETS_ISABELLE="$ISABELLE_FILE -p /Applications/Emacs.app/Contents/MacOS/Emacs ";;
-	*) HETS_ISABELLE=$ISABELLE_FILE ;;
-    esac
+    HETS_ISABELLE=$ISABELLE_FILE
 fi
 
 if [ -d $INSTALL_PATH/Hets-lib ] ; then
