--- a/Hets.cabal
+++ b/Hets.cabal
@@ -1,40 +1,42 @@
 name: Hets
-version: 0.75
-build-depends: 
-    base
-  , haskell98
-  , mtl
-  , parsec
-  , regex-compat
-  , fgl
-  , time
-  , unix
-  , network
-  , Shellac
-  , Shellac-readline
-  , HaXml==1.13.2
-  , HTTP==2006.7.8
-  , hxt
-  , uni-htk-toolkit
-  , uni-htk-toplevel
-  , uni-htk-widgets
-  , uni-htk-devices
-  , uni-htk-kernel
+version: 0.85
+Cabal-Version: >= 1.2.2
+License-File: LICENSE.txt
+Description: The Heterogeneous Tool Set
+-- Setup configure --ghc-pkg-options="-f ../uni/uni-package.conf"
+build-depends:
+    base >= 3.0.1.0
+  , array >= 0.1.0.0
+  , containers >= 0.1.0.1
+  , directory >= 1.0.0.0
+  , pretty >= 1.0.0.0
+  , process >= 1.0.0.0
+  , haskell98 >= 1.0.1.0
+  , mtl >= 1.1.0.0
+  , parsec >= 2.1.0.0
+  , regex-compat >= 0.71.0.1
+  , fgl >= 5.4.1.1
+  , time >= 1.1.2.0
+  , old-time >= 1.0.0.0
+  , unix >= 2.3.0.0
+  , network >= 2.1.0.0
+  , Shellac >= 0.9
+  , Shellac-compatline >= 0.9
+  , HaXml == 1.13.2
+  , HTTP == 3001.0.0.1
+  , hxt >= 7.3
+  , uni-htk >= 1.1
   , uni-util
   , uni-posixutil
   , uni-events
   , uni-reactor
-  , uni-graphs
-  , uni-davinci
-  , HAIFA
-  , syb-generics
-  , programatica
-
+  , uni-graphs >= 1.1
+  , uni-davinci >= 1.1
+  , HAIFA >= 0.11
+  , syb-generics == 2.9
+  , programatica == 1.0
 executable: hets
 main-is: hets.hs
-extensions:
-    NoMonomorphismRestriction
-  , OverlappingInstances
+extensions: OverlappingInstances
 ghc-options: -fglasgow-exts -package-conf ../uni/uni-package.conf -DUNI_PACKAGE
   -DCASLEXTENSIONS -DPROGRAMATICA
-
