--- a/OWL/java/Makefile
+++ b/OWL/java/Makefile
@@ -18,13 +18,13 @@ compile:
 	$(JC) -target $(TARGET) -cp $(INCLUDES) ./org/hets/owl11/atermRender/OWL2ATerm.java
 
 store:
-	jar cvf OWL2ATerm.jar ./MANIFEST.MF org/hets/owl11/atermRender/*.class aterm/* edu/* jjtraveler/* org/antlr/* org/apache/* org/coode/* org/semanticweb/* shared/* uk/*
+	jar cvf OWL2ATerm.jar -m ./MANIFEST.MF  org/hets/owl11/atermRender/*.class aterm/* edu/* jjtraveler/* org/antlr/* org/apache/* org/coode/* org/semanticweb/* shared/* uk/*
 
 source-pkg:
-	jar cvf OWL2ATerm.src.jar ./MANIFEST.MF org/hets/owl11/atermRender/*.java
+	jar cvf OWL2ATerm.src.jar -m ./MANIFEST.MF org/hets/owl11/atermRender/*.java
 
 all-pkg:
-	jar cvf OWL2ATerm.full.jar ./MANIFEST.MF org/hets/owl11/atermRender/* aterm/* edu/* jjtraveler/* org/antlr/* org/apache/* org/coode/* org/semanticweb/* shared/* uk/*
+	jar cvf OWL2ATerm.full.jar -m ./MANIFEST.MF org/hets/owl11/atermRender/* aterm/* edu/* jjtraveler/* org/antlr/* org/apache/* org/coode/* org/semanticweb/* shared/* uk/*
 
 install:
 	cp OWL2ATerm.jar ..
@@ -60,4 +60,3 @@ unpack:
 	unzip -o owlapi-2.1.1/lib/owlapi-rdfxmlrenderer.jar
 	unzip -o owlapi-2.1.1/lib/owlapi-util.jar
 	rm -r META-INF
-	rm -r META-INF/maven
