added l :P git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9635 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/OWL/java/Makefile
+++ b/OWL/java/Makefile
@@ -6,7 +6,7 @@ JC=javac
 
 world: get unpack compile store install
 
-small-word: compile store install
+small-world: compile store install
 
 compile:
 
