corrected paths git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9638 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/OWL/tests/Makefile
+++ b/OWL/tests/Makefile
@@ -2,8 +2,8 @@
 
 .PHONY: check
 
-check: ../OWLParser.jar
+check: ../OWL2ATerm.jar
 	./run.sh
 
 %:
-	(cd ../../..; $(MAKE) $@)
+	(cd ../..; $(MAKE) $@)
