downloading aterm from pellet sources git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9639 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/OWL/java/Makefile
+++ b/OWL/java/Makefile
@@ -30,14 +30,15 @@ install:
 	cp OWL2ATerm.jar ..
 
 clean: 
-	rm -r OWL2ATerm.jar ./org/hets/owl11/atermRender/*.class aterm edu jjtraveler owlapi-2.1.1 owlapi.zip shared uk org/antlr org/apache org/coode org/semanticweb
+	rm -r OWL2ATerm.jar ./org/hets/owl11/atermRender/*.class aterm edu jjtraveler owlapi-2.1.1 owlapi.zip shared uk org/antlr org/apache org/coode org/semanticweb aterm*
 
 get:
 	curl http://mesh.dl.sourceforge.net/sourceforge/owlapi/owlapi-2.1.1.zip  > owlapi.zip
+	curl http://smi-protege.stanford.edu/svn/*checkout*/protege-pellet-reasoner/trunk/lib/aterm-java-1.6.jar > aterm-java-1.6.jar
 	unzip -o owlapi.zip
 
 unpack:
-	unzip -o contrib/aterm-java-1.6.jar
+	unzip -o aterm-java-1.6.jar
 	unzip -o owlapi-2.1.1/lib/antlr-runtime-3.0.jar
 	unzip -o owlapi-2.1.1/lib/commons-lang-2.2.jar
 	unzip -o owlapi-2.1.1/lib/owlapi-apibinding.jar
