git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9723 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/Hets.cabal
+++ b/Hets.cabal
@@ -23,6 +23,7 @@ build-depends:
   , Shellac >= 0.9
   , Shellac-compatline >= 0.9
   , HaXml >= 1.13.2
+  , HaXml <= 1.13.3
   , HTTP == 3001.0.0.1
   , hxt >= 7.3
   , uni-htk >= 1.1
